# My-Repo

CMake/: Study_CMake.txt
CMake/MyBasicProject/: CMakeLists.txt
CMake/MyBasicProject/app/: CMakeLists.txt
CMake/MyBasicProject/app/src/: main.cpp
CMake/MyBasicProject/build_ninja/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake
CMake/MyBasicProject/build_ninja/Testing/Temporary/: CTestCostData.txt
CMake/MyBasicProject/build_ninja/app/: app  cmake_install.cmake
CMake/MyBasicProject/build_ninja/logger/: cmake_install.cmake
CMake/MyBasicProject/build_ninja/test/: CTestTestfile.cmake  cmake_install.cmake  testlog
CMake/MyBasicProject/logger/: CMakeLists.txt
CMake/MyBasicProject/logger/include/: logger.h
CMake/MyBasicProject/logger/src/: logger.cpp
CMake/MyBasicProject/test/: CMakeLists.txt
CMake/MyBasicProject/test/src/: test.cpp
IntReview/: IntvCppQ.txt  RqmJob.txt  SummaryIntvQ.txt
Linux/MiniScheduler/: Makefile  README.md  minisched_client  minisched_daemon
Linux/MiniScheduler/apps/client/: main.cpp  main_client.cpp
Linux/MiniScheduler/apps/daemon/: main.cpp  main_daemon.cpp
Linux/MiniScheduler/config/: minisched.conf
Linux/MiniScheduler/docs/: JobSched_System_Design.txt  JobSchedulerSequence.drawio  Job_Scheduler_Sequence.mmd  architecture.mmd  minischeduler-sequence.md  minischeduler-sequence.mmd  seq-add-job-failures.mmd  seq-add-job.mmd  seq-complete-flow.mmd  seq-overview-brief.mmd  seq-shutdown.mmd  seq-startup.mmd  seq-status.mmd
Linux/MiniScheduler/include/: UnixSocket.h  protocol.h
Linux/MiniScheduler/include/config/: config.h  config_loader.h
Linux/MiniScheduler/include/ipc/: def.h  protocol.h  unix_socket.h
Linux/MiniScheduler/include/job/: job.h
Linux/MiniScheduler/include/scheduler/: job.h
Linux/MiniScheduler/src/: UnixSocket.cpp  main_client.cpp  main_daemon.cpp
Linux/MiniScheduler/src/config/: config_loader.cpp
Linux/MiniScheduler/src/ipc/: unix_socket.cpp
Linux/MiniScheduler/src/job/: job_queue.cpp
Linux/MiniScheduler/src/scheduler/: job_queue.cpp
Linux/MiniScheduler/tests/: Makefile  UT_MINISCHED  UT_MINISCHED-config_loader.gcda  UT_MINISCHED-config_loader.gcno  UT_MINISCHED-job_queue.gcda  UT_MINISCHED-job_queue.gcno  UT_MINISCHED-main.gcda  UT_MINISCHED-main.gcno  main.cpp  minischeduler.info  minischeduler_clean.info  mock.h
Linux/MiniScheduler/tests/coverage_report/: cmd_line  index-sort-f.html  index-sort-l.html  index.html
Linux/MiniScheduler/tests/coverage_report/src/config/: config_loader.cpp.func-c.html  config_loader.cpp.func.html  config_loader.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
Linux/MiniScheduler/tests/coverage_report/src/job/: index-sort-f.html  index-sort-l.html  index.html  job_queue.cpp.func-c.html  job_queue.cpp.func.html  job_queue.cpp.gcov.html
Linux/MiniScheduler/tests/coverage_report/tests/: index-sort-f.html  index-sort-l.html  index.html  main.cpp.func-c.html  main.cpp.func.html  main.cpp.gcov.html  mock.h.func-c.html  mock.h.func.html  mock.h.gcov.html
Linux/Note/: Linux.txt
My Thesis/SmartCarPark/: SQLQuery_danhsachthe.sql  SQLQuery_lichsura.sql  SQLQuery_lichsuvao.sql  SmartCarPark.sln  Solution1.ssmssln
My Thesis/SmartCarPark/Code/INPUT/: INPUT.ioc
My Thesis/SmartCarPark/Code/INPUT/Core/Inc/: main.h
My Thesis/SmartCarPark/Code/INPUT/Core/Src/: main.c  stm32f1xx_hal_msp.c
My Thesis/SmartCarPark/Code/INPUT/MDK-ARM/: INPUT.uvguix.acer  INPUT.uvoptx  INPUT.uvprojx  startup_stm32f103xb.lst
My Thesis/SmartCarPark/Code/INPUT/MDK-ARM/INPUT/: INPUT.axf  INPUT.build_log.htm  INPUT.hex  INPUT.htm  INPUT.lnp  INPUT.map  INPUT_INPUT.dep  clcd_i2c.crf  clcd_i2c.d  main.crf  main.d  rc522.crf  rc522.d  startup_stm32f103xb.d  stm32f1xx_hal.crf  stm32f1xx_hal.d  stm32f1xx_hal_cortex.crf  stm32f1xx_hal_cortex.d  stm32f1xx_hal_dma.crf  stm32f1xx_hal_dma.d  stm32f1xx_hal_exti.crf  stm32f1xx_hal_exti.d  stm32f1xx_hal_flash.crf  stm32f1xx_hal_flash.d  stm32f1xx_hal_flash_ex.crf  stm32f1xx_hal_flash_ex.d  stm32f1xx_hal_gpio.crf  stm32f1xx_hal_gpio.d  (+28 more)
My Thesis/SmartCarPark/Code/OUTPUT/: OUTPUT.ioc
My Thesis/SmartCarPark/Code/OUTPUT/MDK-ARM/: OUTPUT.uvguix.acer  OUTPUT.uvoptx  OUTPUT.uvprojx  startup_stm32f103xb.lst
My Thesis/SmartCarPark/SmartCarPark/: App.config  Doanhthu.Designer.cs  Doanhthu.cs  FindContours.cs  Giaodien.Designer.cs  Giaodien.cs  Giaodien.resx  Lichsu.Designer.cs  Lichsu.cs  Program.cs  Quanlythe.Designer.cs  Quanlythe.cs  SmartCarPark.csproj  Xetrongbai.Designer.cs  Xetrongbai.cs
My Thesis/SmartCarPark/SmartCarPark/Properties/: AssemblyInfo.cs  Resources.Designer.cs
MyNote/: BashShell.txt  CMake.txt  Git.txt  Gmock-GTest.txt
Qt/MusicPlayerDesktop/: RoadMap.txt
Qt/MusicPlayerDesktop/MusicApp/: CMakeLists.txt  Main.qml  app.rc  main.cpp
Qt/MusicPlayerDesktop/MusicApp/components/: PlayerControls.qml  Playlist.qml  SongItem.qml
Qt/MusicPlayerDesktop/MusicApp/qml/: Main.qml
Qt/MusicPlayerDesktop/MusicApp/qml/components/: NowPlaying.qml  PlayerControls.qml  Playlist.qml  SongItem.qml
Qt/MusicPlayerDesktop/MusicApp/qml/styles/: Colors.qml  Theme.qml
Qt/MusicPlayerDesktop/MusicApp/src/controllers/: MusicController.cpp  MusicController.h
Qt/MusicPlayerDesktop/MusicApp/src/models/: Song.h  SongModel.cpp  SongModel.h
Qt/MusicPlayerDesktop/MusicApp/src/services/: SettingService.cpp  SettingService.h
Qt/MusicPlayerDesktop/MusicApp/src/utils/: FileScanner.cpp  FileScanner.h
(+56 files in other folders)
